fix aboutme-text overflow on short view ports

--- a/style.css
+++ b/style.css
@@ -253,7 +253,8 @@ section#about-me {
     margin: 0;
 }
 
-#aboutme-text {
+#aboutme-text { 
+    max-height: 80vh;
     margin-top: 1rem;
     line-height: 1.2;
     font-size: 2rem;
@@ -729,7 +730,7 @@ footer p {
 
     .btn {
         margin: 10px;
-        padding: 3px;
+        padding: 1px;
     }
 
     #words-1 {
@@ -782,7 +783,7 @@ footer p {
 
     .btn {
         margin: 10px;
-        padding: 10px;
+        padding: 5px;
         width: 90%;
     }
 
@@ -797,7 +798,7 @@ footer p {
 
     .btn {
         margin: 10px;
-        padding: 0.5rem;
+        padding: 0rem;
         width: 90%;
     }
 
@@ -839,6 +840,18 @@ footer p {
 
 }
 
+@media only screen and (max-height: 550px) {
+   #aboutme-text {
+    font-size: 1rem;
+   }
+
+   .card-container {
+    height: 120px;
+    width: 120px;
+}
+
+}
+
 @media only screen and (max-height: 450px) {
     .card-container {
         height: 180px;
@@ -847,38 +860,10 @@ footer p {
 
 }
 
-/* Need to fix bug on heights */
-
-
-/* need to check all looks good  on all devices */
-
 
 
 /* Device specific*/
 
-
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-width : 320px) and (max-width : 480px) {}
-
-/* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) {
-    /* Styles */
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 320px) {
-    /* Styles */
-}
-
-/* iPads (portrait and landscape) ----------- */
-@media only screen and (min-width : 768px) and (max-width : 1024px) {
-    /* Styles */
-}
-
-/* iPads (landscape) ----------- */
-@media only screen and (min-width : 768px) and (max-width : 1024px) and (orientation : landscape) {
-    /* Styles */
-}
 
 /* iPads (portrait) ----------- */
 @media only screen and (min-width : 768px) and (max-width : 1024px) and (orientation : portrait) {
